--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -19,38 +19,43 @@
     />
 
     <title>Frontend Mentor | Product preview card component</title>
-
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
   <body>
     <main>
       <article>
         <figure>
-          <img />
+          <picture>
+            <source
+              media="(min-width: 768px)"
+              srcset="./images/image-product-desktop.jpg"
+            />
+            <img src="./images/image-product-mobile.jpg" alt="Perfume" />
+          </picture>
         </figure>
 
         <section>
-          <header>
-            <div class="category">Perfume</div>
-            <h1>Gabrielle Essence Eau De Parfum</h1>
-          </header>
-          <p>
-            A floral, solar and voluptuous interpretation composed by Olivier
-            Polge, Perfumer-Creator for the House of CHANEL.
-          </p>
-          <div class="pricing">
-            <div class="discount_price">$149.99</div>
-            <div class="original_price">$169.99</div>
+          <div class="title">
+            <div class="category text-preset-4">Perfume</div>
+            <h1 class="text-preset-1">Gabrielle Essence Eau De Parfum</h1>
+
+            <p class="text-preset-3">
+              A floral, solar and voluptuous interpretation composed by Olivier
+              Polge, Perfumer-Creator for the House of CHANEL.
+            </p>
           </div>
-          <button>Add to Cart</button>
+          <div class="pricing">
+            <div class="discount_price text-preset-1">$149.99</div>
+            <div class="original_price text-preset-5">$169.99</div>
+          </div>
+          <button class="text-preset-2">
+            <svg width="15" height="16" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M14.383 10.388a2.397 2.397 0 0 0-1.518-2.222l1.494-5.593a.8.8 0 0 0-.144-.695.8.8 0 0 0-.631-.28H2.637L2.373.591A.8.8 0 0 0 1.598 0H0v1.598h.983l1.982 7.4a.8.8 0 0 0 .799.59h8.222a.8.8 0 0 1 0 1.599H1.598a.8.8 0 1 0 0 1.598h.943a2.397 2.397 0 1 0 4.507 0h1.885a2.397 2.397 0 1 0 4.331-.376 2.397 2.397 0 0 0 1.12-2.021ZM11.26 7.99H4.395L3.068 3.196h9.477L11.26 7.991Zm-6.465 6.392a.8.8 0 1 1 0-1.598.8.8 0 0 1 0 1.598Zm6.393 0a.8.8 0 1 1 0-1.598.8.8 0 0 1 0 1.598Z"
+                fill="#FFF"
+              />
+            </svg>
+            Add to Cart
+          </button>
         </section>
       </article>
     </main>
