feat: finish HTML and mobile styles

--- a/four-card-feature-section-master/index.html
+++ b/four-card-feature-section-master/index.html
@@ -18,33 +18,59 @@
     />
 
     <title>Frontend Mentor | Four card feature section</title>
-
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
   <body>
-    Reliable, efficient delivery Powered by Technology Our Artificial
-    Intelligence powered tools use millions of project data points to ensure
-    that your project is successful Supervisor Monitors activity to identify
-    project roadblocks Team Builder Scans our talent network to create the
-    optimal team for your project Karma Regularly evaluates our talent to ensure
-    quality Calculator Uses data from past projects to provide better delivery
-    estimates
+    <main>
+      <header>
+        <h1 class="text-preset-2">
+          Reliable, efficient delivery
+          <span class="text-preset-1">Powered by Technology</span>
+        </h1>
+        <p class="text-preset-4">
+          Our Artificial Intelligence powered tools use millions of project data
+          points to ensure that your project is successful
+        </p>
+      </header>
+      <section>
+        <article class="card-cyan">
+          <div class="title">
+            <h2>Supervisor</h2>
+            <p class="text-preset-5">
+              Monitors activity to identify project roadblocks
+            </p>
+          </div>
+          <img src="./images/icon-supervisor.svg" alt="Supervisor" />
+        </article>
+        <article class="card-red">
+          <div class="title">
+            <h2>Team Builder</h2>
+            <p class="text-preset-5">
+              Scans our talent network to create the optimal team for your
+              project
+            </p>
+          </div>
+          <img src="./images/icon-team-builder.svg" alt="Team builder" />
+        </article>
+        <article class="card-orange">
+          <div class="title">
+            <h2>Karma</h2>
+            <p class="text-preset-5">
+              Regularly evaluates our talent to ensure quality
+            </p>
+          </div>
+          <img src="./images/icon-karma.svg" alt="Karma" />
+        </article>
 
-    <footer>
-      <p class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
-      </p>
-    </footer>
+        <article class="card-blue">
+          <div class="title">
+            <h2>Calculator</h2>
+            <p class="text-preset-5">
+              Uses data from past projects to provide better delivery estimates
+            </p>
+          </div>
+          <img src="./images/icon-calculator.svg" alt="Calculator" />
+        </article>
+      </section>
+    </main>
   </body>
 </html>
