fix: correct typo

--- a/four-card-feature-section-master/index.html
+++ b/four-card-feature-section-master/index.html
@@ -26,8 +26,9 @@
           Reliable, efficient delivery
           <span class="text-preset-1">Powered by Technology</span>
         </h1>
-        <br class="text-preset-4">
-          Our Artificial Intelligence powered tools use millions of project data <br>
+        <p class="text-preset-4">
+          Our Artificial Intelligence powered tools use millions of project data
+          <br />
           points to ensure that your project is successful
         </p>
       </header>
